# know-agent-py

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_document_tables.py  0002_add_pg_trgm_index.py  0003_add_document_error_message.py  0004_hnsw_index.py  0005_add_md5_columns.py  0006_create_agent_threads.py  0007_recreate_hnsw_index.py
data/: rag_eval.jsonl
docs/: api.md  backend-api.md  engineering-roadmap.md  rag-eval.md
docs/superpowers/plans/: 2026-07-13-know-agent-html-prototype.md  2026-07-14-web-ui-rebuild.md  2026-07-15-graph-registry.md  2026-07-15-native-graph-interrupt-presentation.md
docs/superpowers/specs/: 2026-07-14-web-ui-rebuild-design.md  (+5 more)
know-agent-ui/: api.md  package-lock.json  package.json  tailwind.config.ts
know-agent-ui/app/: globals.css  layout.tsx  page.tsx
know-agent-ui/lib/: api.ts  mock-data.ts
scripts/: eval_rag.py  init_db.sql  init_extensions.sql
src/know_agent/: __init__.py  configuration.py  main.py
tests/: conftest.py  test_agent_sse.py  test_auth_login.py  test_cache.py  test_document_service.py  test_graph_router.py  test_memory.py  test_ppt_interrupt.py  test_ppt_requirement.py  test_rag_pipeline.py  test_rate_limit.py  test_registry.py  test_resilient.py  test_scan.py  test_search.py  test_sse_reconnect.py  test_thread_history.py  test_vectorstore.py
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: globals.css  main.tsx
(+107 files in other folders)
